# ot-harjoitustyo

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: TODO.md  arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  työaikakirjanpito.md  vaatimusmaarittely.md
htmlcov/: _home_vaikive__cache_pypoetry_virtualenvs_ot-harjoitustyo-8Z4p6_v6-py3_8_lib_python3_8_site-packages__pytest___init___py.html  _home_vaikive__cache_pypoetry_virtualenvs_ot-harjoitustyo-8Z4p6_v6-py3_8_lib_python3_8_site-packages__pytest__argcomplete_py.html  _home_vaikive__cache_pypoetry_virtualenvs_ot-harjoitustyo-8Z4p6_v6-py3_8_lib_python3_8_site-packages__pytest__code___init___py.html  _home_vaikive__cache_pypoetry_virtualenvs_ot-harjoitustyo-8Z4p6_v6-py3_8_lib_python3_8_site-packages__pytest__code_code_py.html  _home_vaikive__cache_pypoetry_virtualenvs_ot-harjoitustyo-8Z4p6_v6-py3_8_lib_python3_8_site-packages__pytest__code_source_py.html  _home_vaikive__cache_pypoetry_virtualenvs_ot-harjoitustyo-8Z4p6_v6-py3_8_lib_python3_8_site-packages__pytest__io___init___py.html  _home_vaikive__cache_pypoetry_virtualenvs_ot-harjoitustyo-8Z4p6_v6-py3_8_lib_python3_8_site-packages__pytest__io_saferepr_py.html  _home_vaikive__cache_pypoetry_virtualenvs_ot-harjoitustyo-8Z4p6_v6-py3_8_lib_python3_8_site-packages__pytest__io_terminalwriter_py.html  _home_vaikive__cache_pypoetry_virtualenvs_ot-harjoitustyo-8Z4p6_v6-py3_8_lib_python3_8_site-packages__pytest__io_wcwidth_py.html  (+109 more)
src/: build.py  clock.py  config.py  connect_db.py  database.db  (+18 more)
(+47 files in other folders)
