[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = ""
authors = ["Emil Kivelä <emil.kivela@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.5.2"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"
pylint = "^3.0.2"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
